--- a/Parsing.vcxproj.filters
+++ b/Parsing.vcxproj.filters
@@ -18,10 +18,13 @@
     <ClCompile Include="Source.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Parser.cpp">
+    <ClCompile Include="ParserComplex.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ParserOld.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ParserBasic.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -29,10 +32,13 @@
     <ClInclude Include="Header.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Parser.h">
+    <ClInclude Include="ParserComplex.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ParserOld.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ParserBasic.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
